# function_stream

./: CMakeLists.txt  LICENSE  README.md  benchmark_i7_7500u.txt  glean.json  package.json  vcpkg.json
benchmarks/: benchmark_e5540.txt  benchmark_i7_7500u.txt  benchmark_i7_7500u_20170913.txt  benchmark_i7_7500u_20191016_Win10_1903.txt
dependent_projects/: CMakeLists.txt  CMakeListsCompiler.txt  CMakeListsCompiler.txt.orig  dependencies.txt
include/: algorithms.h  algorithms_impl.h  bitonic_sort.h  concept_checks.h  counting_semaphore.h  display_info.h  function_queue.h  function_stream.h  function_stream_impl.h  future_result.h  future_result_impl.h  iterator_range.h  message_queue.h  package.h  spin_lock.h  task_scheduler.h  task_scheduler_impl.h
include/daw/: atomic_wait_predicate.h  benchmark.h  daw_fixed_array.h
include/daw/fs/: algorithms.h  daw_fs_concepts.h  function_stream.h  future_result.h  iterator_range.h  message_queue.h  package.h  task_scheduler.h
include/daw/fs/impl/: algorithms_impl.h  concept_checks.h  daw_always_copy.h  daw_atomic_wait.h  daw_condition_variable.h  daw_function.h  daw_latch.h  daw_locked_ptr.h  dbg_proxy.h  function_stream_impl.h  future_result_impl.h  ithread.h  task.h  task_scheduler_impl.h  task_wrapper.h
include/impl/: algorithms_impl.h  concept_checks.h  function_stream_impl.h  future_result_impl.h  task_scheduler_impl.h
src/: display_info.cpp  function_queue.cpp  function_stream.cpp  future_result.cpp  task_scheduler.cpp
tests/: CMakeLists.txt  algorithms_chunked_for_each_test.cpp  algorithms_count_test.cpp  algorithms_equal_test.cpp  algorithms_fill_test.cpp  algorithms_find_if_test.cpp  algorithms_for_each_test.cpp  algorithms_map_reduce_test.cpp  algorithms_min_max_element_test.cpp  algorithms_reduce_test.cpp  algorithms_scan_test.cpp  algorithms_sort_par_test.cpp  algorithms_sort_seq_test.cpp  algorithms_sort_test.cpp  algorithms_stable_sort_test.cpp  algorithms_test.cpp  algorithms_transform_test.cpp  common.h  function_composition_test.cpp  function_composition_test2.cpp  function_queue_test.cpp  function_stream_test.cpp  future_result_test.cpp  hist01z1.csv  k-means.cpp  map_reduce_test.cpp  message_queue_test.cpp  reverse_test.cpp  task_scheduler_test.cpp
tests/cmake/: test_compiler_options.cmake
tests/include/: common.h
tests/src/: algorithms_equal_test.cpp  algorithms_find_if_test.cpp  algorithms_for_each_test.cpp  algorithms_map_reduce_test.cpp  algorithms_sort_par_test.cpp  algorithms_sort_seq_test.cpp  algorithms_sort_test.cpp  algorithms_stable_sort_test.cpp  algorithms_transform_test.cpp  function_composition_test.cpp  function_stream_test.cpp  future_result_test.cpp  k-means.cpp  map_reduce_test.cpp  message_queue_test.cpp  stream_filter.cpp  task_scheduler_test.cpp
